[package]
name = "coinbase-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[dependencies]
base64 = "0.22"
openssl = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"
