[package]
name = "coinbase-api"
version = "0.1.1"
edition = "2024"
rust-version = "1.85.0"
publish = false

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
p256 = { version = "0.13", features = ["pem", "pkcs8"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
